[package]
name = "rustcrypt"
version = "0.1.0"
publisher = ["Myst3ry"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-to-ascii-art="0.1.5"
walkdir = "2.4.0"
rand = "0.8.5"
clap = { version = "4.4.3", features = ["derive"] }
chacha20poly1305 = { version="0.10.1" , features = ["stream"]}
anyhow = "1.0"
base64 = "0.21.4"